konst/tests/misc_tests/collect_const_ui_tests/collect_const_misc_0_err.stderr
error[E0308]: mismatched types
 --> tests/misc_tests/collect_const_ui_tests/collect_const_misc_0_err.rs:6:5
  |
6 |     konst::iter::collect_const!{u8 => 0usize..10};
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |     |
  |     expected `u8`, found `usize`
  |     arguments to this function are incorrect
  |
  = note: expected array `[u8; CAP_KO9Y329U2U]`
             found array `[usize; CAP_KO9Y329U2U]`
note: associated function defined here
 --> $WORKSPACE/konst_kernel/src/type_eq.rs
  |
  |     pub const fn to(self, from: L) -> R {
  |                  ^^
  = note: this error originates in the macro `$crate::__collect_const_iter_with` which comes from the expansion of the macro `konst::iter::collect_const` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0080]: evaluation of constant value failed
 --> tests/misc_tests/collect_const_ui_tests/collect_const_misc_0_err.rs:6:5
  |
6 |     konst::iter::collect_const!{u8 => 0usize..10};
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ referenced constant has errors
  |
  = note: this error originates in the macro `$crate::__collect_const_iter_with` which comes from the expansion of the macro `konst::iter::collect_const` (in Nightly builds, run with -Z macro-backtrace for more info)
